<resources>

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="_12_string">12</string>
    <string name="_3_string">3</string>
    <string name="_9_string">9</string>
    <string name="_6_string">6</string>
    <string name="nepal_time_string">Nepal Time</string>
    <string name="may_7_friday_string">May 7  Friday</string>
    <string name="world_clock_string">World clock</string>
    <string name="alarm_string">Alarm</string>
    <string name="timer_string">Timer</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="reset_btn">Reset</string>
    <string name="timer_initial">00:00:00</string>
    <string name="label_time">Bao thuc</string>
</resources>