<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:backgroundTint="@color/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="95dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/background"

            android:gravity="center_horizontal">

            <Button
                android:id="@+id/butonWorldClock"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background"
                android:text="@string/world_clock_string"
                android:textColor="@color/blurred" />

            <Button
                android:layout_width="124dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/background"
                android:text="@string/timer_string"
                android:textColor="@color/blurred" />

            <Button
                android:id="@+id/buttonAlarm"
                android:layout_width="124dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/background"
                android:text="@string/alarm_string"
                android:textColor="@color/blurred" />
        </TableRow>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/timer_initial"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold" />

        <!-- Start Button -->
        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timerTextView"
            android:layout_centerHorizontal="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/start_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <!--Stop btn -->
        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/startButton"
            android:layout_centerHorizontal="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:padding="12dp"
            android:text="@string/stop_btn"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stopButton"
            android:layout_centerHorizontal="false"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorAccent"
            android:padding="12dp"
            android:text="@string/reset_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <!-- Reset Button -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>